<resources>
    <string name="app_name">Simple Calorie Counter</string>
    <string name="email">Email</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="activity_level">Activity Level</string>
    <string name="weight">Weight</string>
    <string name="target_weight">Target Weight</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_want_to">I Want To</string>
    <string name="weekly_goal">Weekly goal</string>
    <string name="kg_each_week">kg each week</string>
    <string name="pound_each_week">pound each week</string>
    <string-array name="i_want_to_array">
        <item>Lose Weight</item>
        <item>Gain Weight</item>
    </string-array>
    <string-array name="weekly_goal_array">
        <item>0.5</item>
        <item>1.0</item>
        <item>1.5</item>
    </string-array>

    <string name="mesurment">Measurement</string>
    <string name="cm">cm</string>
    <string name="feet_inches">feet and inches</string>
    <string name="kg">kg</string>
    <string name="pound">pound</string>

    <string-array name="mesurments">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="activity_level">
        <item>Little to no exercise</item>
        <item>Light exercise(1-3 days per week)</item>
        <item>Moderate exercise(3-5 days per week)</item>
        <item>Heavy exercise(6-7 days per weeks)</item>
        <item>Very Heavy exercise(twice per day + extra heavy workouts)</item>
    </string-array>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="blank"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="goal">Goal</string>
    <string name="categories">Categories</string>
    <string name="food">Food</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>


    <string name="name">Name</string>
    <string name="Parent">Parent</string>

    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to Delete</string>
    <string name="save">Save</string>
    <string name="calories_table">Calories table</string>
    <string name="energy">Energy</string>
    <string name="proteins">Proteins</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="per_hundred_gran">Per 100 gram OR 100 ml</string>
    <string name="per_meal">Per Serve</string>
    <string name="manufactor">Manufacturer</string>
    <string name="about">About</string>
    <string name="description">Description</string>
    <string name="general">General</string>
    <string name="serving">Serving</string>
    <string name="number">Number</string>
    <string name="word">Word</string>
    <string name="barcode">Barcode</string>
    <string name="category">Category</string>
    <string name="main">Main</string>
    <string name="sub">Sub</string>
    <string name="current_status">Current status</string>
    <string name="target">Target</string>
    <string name="my_goal">My goal</string>
    <string name="status">Status</string>
    <string name="method">Method</string>
    <string name="bmr">BMR</string>
    <string name="numbers">Numbers</string>
    <string name="diet">Diet</string>
    <string name="with_activity">With activity</string>
    <string name="with_activity_and_diet">With activity and diet</string>

    <string name="if_you_want_to_keep_your_weight">If you want to keep your weight</string>
    <string name="if_you_want_to_loose_weight">If you want to loose weight</string>
    <string name="if_you_want_to">If you want to</string>
    <string name="keep_your_weight">Keep your weight</string>
    <string name="loose_x_kg_week_with_out_exercising">Loose x kg each week with out exercising</string>
    <string name="without_activity">Without activity</string>
    <string name="advanced">Advanced</string>
    <string name="with_activity_">With activity</string>
    <string name="edit">Edit</string>

    <string name="password">Password</string>
    <string name="alias">Alias</string>
    <string name="activity">Activity</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="before_training">Before training</string>
    <string name="after_training">After training</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="supper">Supper</string>

    <string name="portion_size">Portion size = </string>
    <string name="pcs">Quantity/Spoon/Tablespoon/Cup</string>
    <string name="gram">gram/ml</string>
    <string name="add_to_diary">Add to diary</string>
    <string name="unlink">Unlink</string>

    <string name="total_calories">Total Calories</string>
    <string name="consumed">Consumed Calories</string>
    <string name="remaining">Remaining Calories</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="note">Notes:</string>
    <string name="note1">1: Click On The Eaten Foods to Either Remove it or Edit it.</string>
    <string name="note2">2: Click on (+) Sign to Add Eaten Food to Food Diary.</string>


</resources>
