<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FragmentFoodView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <!-- Headline -->
        <TextView
            android:id="@+id/textViewViewFoodName"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="12dp"
            android:text="@string/name"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewViewFoodManufactorName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/manufactor"
            android:textColor="@android:color/holo_green_dark" />
        <!-- //Headline -->


        <!-- Image -->
        <ImageView
            android:id="@+id/imageViewViewFoodImage"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            app:srcCompat="@drawable/logo1" />
        <!-- //Image -->

        <!-- About -->
        <TextView
            android:id="@+id/textViewViewFoodAbout"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/about"
            android:textColor="@android:color/holo_green_dark" />
        <!-- //About -->

        <!-- Description -->
        <!-- //Description -->


        <!-- Calories table -->
        <TextView
            android:id="@+id/textViewViewFoodDescription"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="@string/description"
            android:textColor="@android:color/holo_green_dark" />

        <TextView
            android:id="@+id/textViewViewFoodCaloriesTable"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="18dp"
            android:text="@string/calories_table"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/textViewViewFoodBlank"
                    android:layout_width="102dp"
                    android:layout_height="match_parent"
                    android:text="@string/blank" />

                <TextView
                    android:id="@+id/textViewViewFoodEnergy"
                    android:layout_width="53dp"
                    android:layout_height="wrap_content"
                    android:text="@string/energy"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/textViewViewFoodProteins"
                    android:layout_width="63dp"
                    android:layout_height="wrap_content"
                    android:text="@string/proteins"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/textViewViewFoodCarbs"
                    android:layout_width="47dp"
                    android:layout_height="wrap_content"
                    android:text="@string/carbs"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/textViewViewFoodFat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fat"
                    android:textColor="@color/colorPrimaryDark" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textViewViewFoodBlankPerHundred"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:text="@string/per_hundred_gran"
                    android:textColor="@android:color/holo_orange_dark" />

                <TextView
                    android:id="@+id/textViewViewFoodEnergyPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/energy"
                    android:textColor="@android:color/background_dark" />

                <TextView
                    android:id="@+id/textViewViewFoodProteinsPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/proteins"
                    android:textColor="@android:color/background_dark" />

                <TextView
                    android:id="@+id/textViewViewFoodCarbsPerHundred"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/carbs"
                    android:textColor="@android:color/background_dark" />

                <TextView
                    android:id="@+id/textViewViewFoodFatPerHundred"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fat"
                    android:textColor="@android:color/background_dark" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/textViewViewFoodBlankPerN"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/per_meal"
                    android:textColor="@android:color/holo_orange_dark" />

                <TextView
                    android:id="@+id/textViewViewFoodEnergyPerN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/energy"
                    android:textColor="@android:color/background_dark" />

                <TextView
                    android:id="@+id/textViewViewFoodProteinsPerN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/proteins"
                    android:textColor="@android:color/background_dark" />

                <TextView
                    android:id="@+id/textViewViewFoodCarbsPerN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/carbs"
                    android:textColor="@android:color/background_dark" />

                <TextView
                    android:id="@+id/textViewViewFoodFatPerN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fat"
                    android:textColor="@android:color/background_dark" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/blank" />
        <!-- //Calories table -->
    </LinearLayout>
</ScrollView>